Fix dice spacing on mobile

--- a/src/features/roller/result/Resolve.module.css
+++ b/src/features/roller/result/Resolve.module.css
@@ -1,6 +1,5 @@
 .layout {
   background-color: white;
-  padding: 24px;
 }
 
 .container {
